--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, intitial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Game of Pixel Tanks</title>
+        <link rel="shortcut icon" type="logo.png" href="/assets/logo.png"> 
         <link rel="stylesheet" href="./index.css">
         <script src="./index.js" type="module" async></script>
     </head>
